# clean_the_table

./: README .md  README.md
clean_table/: package.xml  setup.cfg  setup.py
clean_table/clean_table/: align_to_marker_server.py  blocking.py  drive_distance_server.py  marker_lookup_service.py  orchestrator_node.py  pick_place_server.py
clean_table/launch/: clean_table.launch.py
custom_actions/: CMakeLists.txt  package.xml
custom_actions/action/: AlignToMarker.action  DriveDistance.action  PickPlace.action  PickPlace_old.action
custom_actions/srv/: GetMarkerTransform.srv
